--- a/app/src/main/res/menu/menu_ingredient.xml
+++ b/app/src/main/res/menu/menu_ingredient.xml
@@ -6,12 +6,12 @@
         android:id="@+id/action_ingredient_discard"
         android:orderInCategory="100"
         android:icon="@android:drawable/ic_menu_close_clear_cancel"
-        android:title="Discard"
-        app:showAsAction="always" />
+        android:title="@string/txt_discard"
+        app:showAsAction="ifRoom" />
     <item
         android:id="@+id/action_ingredient_save"
         android:orderInCategory="100"
         android:icon="@android:drawable/ic_menu_save"
-        android:title="Save"
-        app:showAsAction="always" />
+        android:title="@string/txt_save"
+        app:showAsAction="ifRoom" />
 </menu>
