--- a/app/src/main/res/menu/menu_recipe.xml
+++ b/app/src/main/res/menu/menu_recipe.xml
@@ -5,13 +5,13 @@
     <item
         android:id="@+id/action_recipe_activity_search"
         android:icon="@android:drawable/ic_menu_search"
-        android:title="search"
+        android:title="@string/txt_search"
         app:actionViewClass="android.support.v7.widget.SearchView"
         app:showAsAction="ifRoom|collapseActionView" />
     <item
         android:id="@+id/action_recipe_activity_add"
         android:icon="@android:drawable/ic_menu_add"
         android:orderInCategory="100"
-        android:title="Add a recipe"
+        android:title="@string/txt_add_recipe"
         app:showAsAction="always" />
 </menu>
